@@ -1,4 +1,4 @@
-#ifndef _UNEVT_Event_H_  // -*-c++-*-
+#ifndef _UNEVT_Event_H_  // -*- mode: c++; c-file-style: "hopper"-*-
 
 #ifdef __GNUG__
 #  pragma interface
@@ -36,7 +36,8 @@ class UNIEvent : virtual public Protocol, public ReferenceCounting {
    virtual void TriggerEvent(UNIDispatcher *dispatcher = 0) = 0;
 
    //: Alternate form of TriggerEvent
-   inline void operator ()(UNIDispatcher *dispatcher = 0);
+   inline void operator ()(UNIDispatcher *dispatcher);
+   inline void operator ()()                           { (*this)(0); }
 
  protected:
    virtual const ClassIdent *i_GetIdent() const        { return(&identifier); }
@@ -54,7 +55,7 @@ inline int UNIEvent::AreYouA(const ClassIdent &cid) const
    return((identifier == cid) || Protocol::AreYouA(cid));
 }
 
-inline void UNIEvent::operator ()(UNIDispatcher *dispatcher = 0)
+inline void UNIEvent::operator ()(UNIDispatcher *dispatcher)
 {
    TriggerEvent(dispatcher);
 }
